--- a/html/history_of_band.html
+++ b/html/history_of_band.html
@@ -21,27 +21,27 @@
             </ul>
         </div>
         <div class="section history">                    
-            <ul >
-                <li><p>1996: Band formed in Agoura Hills, California, under the name Xero by Mike Shinoda, Brad Delson, and Rob Bourdon.</p></li>
-                <li><p>1999: After lineup changes, Chester Bennington joined as lead vocalist. Band renamed Linkin Park.</p></li>
-                <li><p>2000: Release of debut album Hybrid Theory → massive worldwide success (eventually 27+ million copies sold).</p></li>
-                <li><p>2001: First world tour. Band wins Grammy Award for Crawling.</p></li>
-                <li><p>2002: Remix album Reanimation released.</p></li>
-                <li><p>2003: Second studio album Meteora released → #1 in many countries. Singles like Numb, Breaking the Habit.</p></li>
-                <li><p>2004: Collaboration with Jay-Z on Collision Course. The track Numb/Encore wins a Grammy.</p></li>
-                <li><p>2005: Live album Live in Texas continues their success. Band becomes one of the biggest rock acts worldwide.</p></li>
-                <li><p>2007: Third studio album Minutes to Midnight released. Sound shifts toward alternative rock.</p></li>
-                <li><p>2010: Fourth studio album A Thousand Suns released → experimental, electronic influences.</p></li>
-                <li><p>2012: Fifth album Living Things released. Singles like Burn It Down.</p></li>
-                <li><p>2013: Band records soundtrack Castle of Glass for Medal of Honor: Warfighter (video game).</p></li>
-                <li><p>2014: Sixth album The Hunting Party released → heavier guitar-driven sound.</p></li>
-                <li><p>2017: Seventh album One More Light released. More pop-oriented sound.</p></li>
-                <li><p>July 20, 2017: Tragic passing of Chester Bennington, which shook the music world. Band activity paused.</p></li>
-                <li><p>2017 (October): Tribute concert Linkin Park and Friends: Celebrate Life in Honor of Chester Bennington.</p></li>
-                <li><p>2019: Mike Shinoda releases solo work; Linkin Park remains on hiatus.</p></li>
-                <li><p>2020: 20th Anniversary of Hybrid Theory, special reissue with demos and unreleased tracks.</p></li>
-                <li><p>2023: 20th Anniversary of Meteora, release of Meteora 20th Anniversary Edition featuring unheard demos like Lost.</p></li>
-                <li><p>2024–2025: Band remains mostly inactive but continues to release anniversary editions, demos, and maintain strong legacy with fans worldwide.</p></li>                
+            <ul>
+                <li><p>1996: Band formed in Agoura Hills, California, under the name <strong>Xero</strong> by <em>Mike Shinoda</em>, <em>Brad Delson</em>, and <em>Rob Bourdon</em>.</p></li>
+                <li><p>1999: After lineup changes, <em>Chester Bennington</em> joined as lead vocalist. Band renamed <strong>Linkin Park</strong>.</p></li>
+                <li><p>2000: Release of debut album <strong>Hybrid Theory</strong>: massive worldwide success (eventually 27+ million copies sold).</p></li>
+                <li><p>2001: First world tour. Band wins <strong>Grammy Award</strong> for <em>Crawling</em>.</p></li>
+                <li><p>2002: Remix album <em>Reanimation</em> released.</p></li>
+                <li><p>2003: Second studio album <strong>Meteora</strong> released: #1 in many countries. Singles like <em>Numb</em>, <em>Breaking the Habit</em>.</p></li>
+                <li><p>2004: Collaboration with <strong>Jay-Z</strong> on Collision Course. The track <em>Numb/Encore</em> wins a <strong>Grammy</strong>.</p></li>
+                <li><p>2005: Live album <strong>Live in Texas</strong> continues their success. Band becomes one of the biggest rock acts worldwide.</p></li>
+                <li><p>2007: Third studio album <strong>Minutes to Midnight</strong> released. Sound shifts toward <em>alternative rock</em>.</p></li>
+                <li><p>2010: Fourth studio album <strong>A Thousand Suns</strong> released: experimental, electronic influences.</p></li>
+                <li><p>2012: Fifth album <strong>Living Things</strong> released. Singles like <em>Burn It Down</em>.</p></li>
+                <li><p>2013: Band records soundtrack <em>Castle of Glass</em> for <strong>Medal of Honor</strong>: Warfighter (video game).</p></li>
+                <li><p>2014: Sixth album <strong>The Hunting Party</strong> released: heavier guitar-driven sound.</p></li>
+                <li><p>2017: Seventh album <strong>One More Light</strong> released. More pop-oriented sound.</p></li>
+                <li><p>July 20, 2017: Tragic passing of <strong>Chester Bennington</strong>, which shook the music world. Band activity <em>paused</em>.</p></li>
+                <li><p>2017 (October): Tribute concert Linkin Park and Friends: <strong>Celebrate Life in Honor of Chester Bennington</strong>.</p></li>
+                <li><p>2019: <strong>Mike Shinoda</strong> releases solo work; Linkin Park remains on hiatus.</p></li>
+                <li><p>2020: 20th Anniversary of <strong>Hybrid Theory</strong>, special reissue with demos and unreleased tracks.</p></li>
+                <li><p>2023: 20th Anniversary of <strong>Meteora</strong>, release of Meteora 20th Anniversary Edition featuring unheard demos like Lost.</p></li>
+                <li><p>2024-2025: Band remains mostly <em>inactive</em> but continues to release anniversary editions, demos, and maintain strong legacy with fans worldwide.</p></li>                
             </ul>
         </div>
     </div>
