Finished the website

--- a/html/history_of_band.html
+++ b/html/history_of_band.html
@@ -39,8 +39,8 @@
                 <li><p>July 20, 2017: Tragic passing of <strong>Chester Bennington</strong>, which shook the music world. Band activity <em>paused</em>.</p></li>
                 <li><p>2017 (October): Tribute concert Linkin Park and Friends: <strong>Celebrate Life in Honor of Chester Bennington</strong>.</p></li>
                 <li><p>2019: <strong>Mike Shinoda</strong> releases solo work; Linkin Park remains on hiatus.</p></li>
-                <li><p>2020: 20th Anniversary of <strong>Hybrid Theory</strong>, special reissue with demos and unreleased tracks.</p></li>
-                <li><p>2023: 20th Anniversary of <strong>Meteora</strong>, release of Meteora 20th Anniversary Edition featuring unheard demos like Lost.</p></li>
+                <li><p>2020: <em>20th Anniversary</em> of <strong>Hybrid Theory</strong>, special reissue with demos and unreleased tracks.</p></li>
+                <li><p>2023: <em>20th Anniversary</em> of <strong>Meteora</strong>, release of Meteora 20th Anniversary Edition featuring unheard demos like Lost.</p></li>
                 <li><p>2024-2025: Band remains mostly <em>inactive</em> but continues to release anniversary editions, demos, and maintain strong legacy with fans worldwide.</p></li>                
             </ul>
         </div>
