--- a/html/joe_hahn.html
+++ b/html/joe_hahn.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Табличний макет</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
   <table class="layout-table" role="presentation">
@@ -27,12 +27,12 @@
       <td class="block block2" rowspan="3">
         <h3>Menu</h3>
         <ul>
-          <li><a href="index.html">Chester Bennington</a></li>
-          <li><a href="html/mike_shinoda.html">Mike Shinoda</a></li>
-          <li><a href="html/dave_farrell.html">Dave Farrell</a></li>
-          <li><a href="html/brad_delson.html">Brad Delson</a></li>
-          <li><a href="html/joe_hahn.html">Joe Hahn</a></li>
-          <li><a href="html/rob_bourdon.html">Rob Bourdon</a></li>
+          <li><a href="../index.html">Chester Bennington</a></li>
+          <li><a href="mike_shinoda.html">Mike Shinoda</a></li>
+          <li><a href="dave_farrell.html">Dave Farrell</a></li>
+          <li><a href="brad_delson.html">Brad Delson</a></li>
+          <li><a href="joe_hahn.html">Joe Hahn</a></li>
+          <li><a href="rob_bourdon.html">Rob Bourdon</a></li>
         </ul>
       </td>
       <td class="block block3" colspan="2">
@@ -43,9 +43,9 @@
     <!-- Рядок 3 -->
     <tr class="row row3">
       <td class="block block4">
-        <img src="pictures/chester_bennington.png" alt="Chester Bennington", usemap="#chestermap", title="Click on a face to see information about an artist.">
-        <map name="chestermap">
-          <area shape="circle" coords="264, 150, 94" href="https://en.wikipedia.org/wiki/Chester_Bennington" alt="Chester Bennington" target="_blank">
+        <img src="../pictures/joe_hahn.jpg" alt="Joe Hahn", usemap="#joemap", title="Click on a face to see information about an artist.">
+        <map name="joemap">
+          <area shape="circle" coords="521, 161, 125" href="https://en.wikipedia.org/wiki/Joe_Hahn" alt="Joe Hahn" target="_blank">
       </td>
       <td class="block block5" rowspan="2">
         <ol>
