Added icons and map resizer

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8" />
-  <title>Табличний макет</title>
+  <title>Chester Bennington</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="png" href="pictures/logo.png">  
+  <script src="https://cdn.jsdelivr.net/npm/image-map-resizer@1.0.10/js/imageMapResizer.min.js"></script>
+<script>
+  window.onload = function() {
+    imageMapResize();
+  };
+</script>
 </head>
 <body>
   <table class="layout-table" role="presentation">
@@ -16,7 +23,7 @@
     <!-- Рядок 1: Блок 1 -->
    <tr class="row row1">
       <td class="block block1-left">
-        <div class="blockX">Блок X</div>
+        <div class="blockX">One More Light</div>
       </td>
       <td class="block block1-center"></td>
       <td class="block block1-right"><p>Просто текст праворуч</p></td>
