Totally finished development

--- a/html/rob_bourdon.html
+++ b/html/rob_bourdon.html
@@ -23,10 +23,10 @@
     <!-- Рядок 1: Блок 1 -->
    <tr class="row row1">
       <td class="block block1-left">
-        <div class="blockX">One More Light</div>
+        <div class="blockX"><h1>One More Light</h1></div>
       </td>
       <td class="block block1-center"></td>
-      <td class="block block1-right"><p>Просто текст праворуч</p></td>
+      <td class="block block1-right"><p>One Step Closer to the Edge</p></td>
     </tr>
 
     <!-- Рядок 2 -->
@@ -43,7 +43,7 @@
         </ul>
       </td>
       <td class="block block3" colspan="2">
-        <p>Комірка 3: Текст посередині</p>
+        <p>Information about an artist</p>
       </td>
     </tr>
 
@@ -55,14 +55,11 @@
           <area shape="circle" coords="424, 93, 91" href="https://en.wikipedia.org/wiki/Rob_Bourdon" alt="Rob Bourdon" target="_blank">
       </td>
       <td class="block block5" rowspan="2">
+        <h3>Main Facts</h3>
         <ol>
-          <li>Hybrid Theory</li>
-          <li>Meteora</li>
-          <li>Minutes to Midnight</li>
-          <li>A Thousand Suns</li>
-          <li>Living Things</li>
-          <li>The Hunting Party</li>
-          <li>One More Light</li>
+          <li>Drummer of Linkin Park, one of the long-term/founding members of the band.</li>
+          <li>His style combines a traditional rock groove with elements of hip-hop rhythms, which reinforces the band's sound..</li>
+          <li>Responsible for rhythmic stability in live performances and contribution to percussion arrangements.</li>
         </ol>
       </td>
     </tr>
@@ -70,16 +67,16 @@
     <!-- Рядок 4 -->
     <tr class="row row4">
       <td class="block block6">
-        <p>Комірка 6: Текст</p>
+        <p>Rob Bourdon</p>
       </td>
     </tr>
 
     <!-- Рядок 5: Блок 7 -->
     <tr class="row row5">
-      <td class="block block7-left"><p>Просто текст ліворуч</p></td>
+      <td class="block block7-left"><p>Hybrid Theory Forever</p></td>
       <td class="block block7-center"></td>
       <td class="block block7-right">
-        <div class="blockY">LINKIN PARK</div>
+        <div class="blockY"><h1>LINKIN PARK</h1></div>
       </td>
     </tr>
   </table>
