--- a/html/dave_farrell.html
+++ b/html/dave_farrell.html
@@ -23,10 +23,10 @@
     <!-- Рядок 1: Блок 1 -->
    <tr class="row row1">
       <td class="block block1-left">
-        <div class="blockX">One More Light</div>
+        <div class="blockX"><h1>One More Light</h1></div>
       </td>
       <td class="block block1-center"></td>
-      <td class="block block1-right"><p>Просто текст праворуч</p></td>
+      <td class="block block1-right"><p>One Step Closer to the Edge</p></td>
     </tr>
 
     <!-- Рядок 2 -->
@@ -43,7 +43,7 @@
         </ul>
       </td>
       <td class="block block3" colspan="2">
-        <p>Комірка 3: Текст посередині</p>
+        <p>Information about an artist</p>
       </td>
     </tr>
 
@@ -55,14 +55,11 @@
           <area shape="circle" coords="394, 151, 126" href="https://en.wikipedia.org/wiki/Dave_Farrell" alt="Mike Shinoda" target="_blank">
       </td>
       <td class="block block5" rowspan="2">
+        <h3>Main Facts</h3>
         <ol>
-          <li>Hybrid Theory</li>
-          <li>Meteora</li>
-          <li>Minutes to Midnight</li>
-          <li>A Thousand Suns</li>
-          <li>Living Things</li>
-          <li>The Hunting Party</li>
-          <li>One More Light</li>
+            <li>The band's bassist, often known by the nickname "Phoenix".</li>
+            <li>A regular participant in studio recordings and concert tours, he provides the low-frequency foundation of the music.</li>
+            <li>Participates in live arrangements and backing vocals; important in creating the band's dynamic.</li>
         </ol>
       </td>
     </tr>
@@ -70,16 +67,16 @@
     <!-- Рядок 4 -->
     <tr class="row row4">
       <td class="block block6">
-        <p>Комірка 6: Текст</p>
+        <p>Dave Farrell</p>
       </td>
     </tr>
 
     <!-- Рядок 5: Блок 7 -->
     <tr class="row row5">
-      <td class="block block7-left"><p>Просто текст ліворуч</p></td>
+      <td class="block block7-left"><p>Hybrid Theory Forever</p></td>
       <td class="block block7-center"></td>
       <td class="block block7-right">
-        <div class="blockY">LINKIN PARK</div>
+        <div class="blockY"><h1>LINKIN PARK</h1></div>
       </td>
     </tr>
   </table>
