--- a/html/joe_hahn.html
+++ b/html/joe_hahn.html
@@ -23,10 +23,10 @@
     <!-- Рядок 1: Блок 1 -->
    <tr class="row row1">
       <td class="block block1-left">
-        <div class="blockX">One More Light</div>
+        <div class="blockX"><h1>One More Light</h1></div>
       </td>
       <td class="block block1-center"></td>
-      <td class="block block1-right"><p>Просто текст праворуч</p></td>
+      <td class="block block1-right"><p>One Step Closer to the Edge</p></td>
     </tr>
 
     <!-- Рядок 2 -->
@@ -43,7 +43,7 @@
         </ul>
       </td>
       <td class="block block3" colspan="2">
-        <p>Комірка 3: Текст посередині</p>
+        <p>Information about an artist</p>
       </td>
     </tr>
 
@@ -55,14 +55,11 @@
           <area shape="circle" coords="521, 161, 125" href="https://en.wikipedia.org/wiki/Joe_Hahn" alt="Joe Hahn" target="_blank">
       </td>
       <td class="block block5" rowspan="2">
+        <h3>Main Facts</h3>
         <ol>
-          <li>Hybrid Theory</li>
-          <li>Meteora</li>
-          <li>Minutes to Midnight</li>
-          <li>A Thousand Suns</li>
-          <li>Living Things</li>
-          <li>The Hunting Party</li>
-          <li>One More Light</li>
+          <li>DJ/turntables, responsible for samples, scratches and electronic textures in the band's sound.</li>
+          <li>Also an artist and director - directed and conceived many of Linkin Park's music videos and visual design.</li>
+          <li>Influences the band's visual aesthetic: from album covers to stage videos and multimedia.</li>
         </ol>
       </td>
     </tr>
@@ -70,16 +67,16 @@
     <!-- Рядок 4 -->
     <tr class="row row4">
       <td class="block block6">
-        <p>Комірка 6: Текст</p>
+        <p>Joe Hahn</p>
       </td>
     </tr>
 
     <!-- Рядок 5: Блок 7 -->
     <tr class="row row5">
-      <td class="block block7-left"><p>Просто текст ліворуч</p></td>
+      <td class="block block7-left"><p>Hybrid Theory Forever</p></td>
       <td class="block block7-center"></td>
       <td class="block block7-right">
-        <div class="blockY">LINKIN PARK</div>
+        <div class="blockY"><h1>LINKIN PARK</h1></div>
       </td>
     </tr>
   </table>
